--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
 appdirs==1.4.0
+appnope==0.1.0
+decorator==4.0.11
+docopt==0.6.2
 falcon==1.0.0
 hug==2.2.0
+ipython==5.2.2
+ipython-genutils==0.1.0
+jedi==0.10.0
 packaging==16.8
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.13
+ptipython==1.0.0
+ptpython==0.36
+ptyprocess==0.5.1
+py==1.4.32
+Pygments==2.2.0
 pyparsing==2.1.10
+pytest==3.0.6
 python-mimeparse==1.6.0
 requests==2.13.0
+simplegeneric==0.8.1
 six==1.10.0
+traitlets==4.3.1
+wcwidth==0.1.7
 webcolors==1.7
